--- a/css/style.css
+++ b/css/style.css
@@ -131,8 +131,9 @@ body {
   font-size: 1.6rem;
   margin-top: 0.8rem;
   line-height: 1.4;
-  font-weight: 100;
+  font-weight: 300;
   text-shadow: 1px 1px 3px rgba(0, 14, 37, 0.5);
+  mix-blend-mode: difference;
 }
 
 .hero .content .cta {
@@ -192,7 +193,7 @@ body {
 .about .row .content p {
   margin-bottom: 0.8rem;
   font-size: 1.4rem;
-  font-weight: 100;
+  font-weight: 300;
   line-height: 1.6;
 }
 
@@ -208,7 +209,7 @@ body {
   max-width: 30rem;
   margin: auto;
   font-size: 1.2rem;
-  font-weight: 100;
+  font-weight: 300;
   line-height: 1.6;
 }
 
